stitch/src/snapshots/stitch__parser__tests__parses_nested_tuple.snap
---
source: stitch/src/parser.rs
expression: "p(\"((1, 2), 3)\")"
---
Tuple(
    [
        Tuple(
            [
                Int(
                    1,
                ),
                Int(
                    2,
                ),
            ],
        ),
        Int(
            3,
        ),
    ],
)
