stitch/src/snapshots/stitch__parser__tests__parses_newtype_prod_positional_field.snap
---
source: stitch/src/parser.rs
expression: "prog(\"prod Celsius(Int)\")"
---
[
    Prod {
        name: "Celsius",
        generics: [],
        fields: [
            Field {
                name: None,
                mutable: false,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
        ],
        public: false,
    },
]
