stitch/src/snapshots/stitch__parser__tests__parses_on_block_implementing_a_contract.snap
---
source: stitch/src/parser.rs
expression: "prog(r#\"on Point : Show { show() = \"point\" }\"#)"
---
[
    On {
        target: Name {
            name: "Point",
            args: [],
        },
        contract: Some(
            Name {
                name: "Show",
                args: [],
            },
        ),
        methods: [
            Method {
                name: "show",
                modifier: Instance,
                params: [],
                ret: None,
                body: Some(
                    Str(
                        [
                            Lit(
                                "point",
                            ),
                        ],
                    ),
                ),
            },
        ],
    },
]
