stitch/src/snapshots/stitch__parser__tests__parses_on_block_with_self_fields.snap
---
source: stitch/src/parser.rs
expression: "prog(\"on Point { dist() = @x * @x + @y * @y }\")"
---
[
    On {
        target: Name {
            name: "Point",
            args: [],
        },
        contract: None,
        methods: [
            Method {
                name: "dist",
                modifier: Instance,
                params: [],
                ret: None,
                uses: [],
                body: Some(
                    Binary {
                        op: Add,
                        left: Binary {
                            op: Mul,
                            left: Field {
                                object: SelfRef,
                                name: "x",
                            },
                            right: Field {
                                object: SelfRef,
                                name: "x",
                            },
                        },
                        right: Binary {
                            op: Mul,
                            left: Field {
                                object: SelfRef,
                                name: "y",
                            },
                            right: Field {
                                object: SelfRef,
                                name: "y",
                            },
                        },
                    },
                ),
            },
        ],
    },
]
