stitch/src/snapshots/stitch__parser__tests__parses_open_ended_range_from.snap
---
source: stitch/src/parser.rs
expression: "p(\"n..\")"
---
Range {
    start: Some(
        Var(
            "n",
        ),
    ),
    end: None,
    inclusive: false,
}
