stitch/src/snapshots/stitch__parser__tests__parses_pair_tuple.snap
---
source: stitch/src/parser.rs
expression: "p(\"(1, 2)\")"
---
Tuple(
    [
        Int(
            1,
        ),
        Int(
            2,
        ),
    ],
)
