stitch/src/snapshots/stitch__parser__tests__parses_plain_string.snap
---
source: stitch/src/parser.rs
expression: "p(r#\"\"hello\"\"#)"
---
Str(
    [
        Lit(
            "hello",
        ),
    ],
)
