stitch/src/snapshots/stitch__parser__tests__parses_prod_with_mut_field.snap
---
source: stitch/src/parser.rs
expression: "prog(\"prod Counter(mut n: Int)\")"
---
[
    Prod {
        name: "Counter",
        generics: [],
        fields: [
            Field {
                name: Some(
                    "n",
                ),
                mutable: true,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
        ],
        public: false,
    },
]
