stitch/src/snapshots/stitch__parser__tests__parses_prod_with_named_fields.snap
---
source: stitch/src/parser.rs
expression: "prog(\"prod Point(x: Int, y: Int)\")"
---
[
    Prod {
        name: "Point",
        generics: [],
        fields: [
            Field {
                name: Some(
                    "x",
                ),
                mutable: false,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
            Field {
                name: Some(
                    "y",
                ),
                mutable: false,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
        ],
        public: false,
    },
]
